--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "lodash": "^4.17.13",
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.15.2",
-    "sass-loader": "^8.0.0"
+    "sass-loader": "^8.0.0",
+    "vue": "^2.6.11",
+    "vue-template-compiler": "^2.6.11",
+    "vuex": "^3.5.1"
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
