--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "phpoffice/phpspreadsheet": "^1.14"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "barryvdh/laravel-ide-helper": "^2.8",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
